Generation dropdown z-index fix

--- a/src/Components/GenDropdown.css
+++ b/src/Components/GenDropdown.css
@@ -1,5 +1,4 @@
 .genDropdown {
-  z-index: 1002;
   margin: 0 auto 1.5rem auto;
   width: 200px;
   position: relative;
